Improved the ldap_base_head and ldap_domain variables these the default values can be calculated using the ldap_basedn value.

--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -7,6 +7,23 @@
         - "vars/{{ ansible_os_family }}.yml"
       skip: true
 
+- name: Define ldap_base_head
+  set_fact:
+    ldap_base_head: |
+      {% set r = ldap_basedn.split(',')[0].split('=')[1] %}
+      {{ r }}
+  when: ldap_base_head is not defined
+
+- name: Define ldap_domain
+  set_fact:
+    ldap_domain: |
+      {% set r = [] %}
+      {% for t in ldap_basedn.split(',') %}
+      {%   set _ = r.append(t.split('=')[1]) %}
+      {% endfor %}
+      {{ r | join('.') }}
+  when: ldap_domain is not defined
+
 - name: Define ldap_server_packages
   set_fact:
     ldap_server_packages: "{{ __ldap_server_packages | list }}"
