Fixed an issue that remove unnecessary blank from the value of variables.

--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -10,17 +10,17 @@
 - name: Define ldap_base_head
   set_fact:
     ldap_base_head: >-
-      {% set r = ldap_basedn.split(',')[0].split('=')[1] %}
+      {%- set r = ldap_basedn.split(',')[0].split('=')[1] -%}
       {{ r }}
   when: ldap_base_head is not defined
 
 - name: Define ldap_domain
   set_fact:
     ldap_domain: >-
-      {% set r = [] %}
-      {% for t in ldap_basedn.split(',') %}
-      {%   set _ = r.append(t.split('=')[1]) %}
-      {% endfor %}
+      {%- set r = [] -%}
+      {%- for t in ldap_basedn.split(',') -%}
+      {%-   set _ = r.append(t.split('=')[1]) -%}
+      {%- endfor -%}
       {{ r | join('.') }}
   when: ldap_domain is not defined
 
