--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,6 +19,8 @@
   when: slapd_install_module_memberof
 - include_tasks: "module-refint.yml"
   when: slapd_install_module_refint or slapd_install_module_memberof
+  tags:
+    - slapd_replication
 - include_tasks: "module-syncprov.yml"
   when: slapd_install_module_syncprov
 - include_tasks: "schema-cosine.yml"
@@ -34,3 +36,5 @@
 
 - include_tasks: "replication.yml"
   when: slapd_replication
+  tags:
+    - slapd_replication
