Fixed a test error that can not run replication tasks on RHEL/CentOS 7.

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -43,6 +43,7 @@ provisioner:
         slapd_install_module_refint: false
         slapd_install_module_memberof: false
         slapd_install_module_syncprov: false
+        slapd_replication: false
 
 verifier:
   name: ansible
