--- a/tasks/schema-misc.yml
+++ b/tasks/schema-misc.yml
@@ -8,6 +8,7 @@
     filter: "(&(cn={*}misc)(objectClass=olcSchemaConfig))"
   check_mode: false
   register: schema_misc
+  when: slapd_schema_misc_dn is not defined
 
 - name: Define slapd_schema_misc_dn
   set_fact:
