--- a/tasks/schema-sudo.yml
+++ b/tasks/schema-sudo.yml
@@ -8,6 +8,7 @@
     filter: "(&(cn={*}sudo)(objectClass=olcSchemaConfig))"
   check_mode: false
   register: schema_sudo
+  when: slapd_schema_sudo_dn is not defined
 
 - name: Define slapd_schema_sudo_dn
   set_fact:
