--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
       matrix:
         distro:
           - centos7
+          - ubuntu2204
           - ubuntu2004
           - ubuntu1804
           - debian11
